Preventing parent components changing steps component text align property.

--- a/components/steps/style/index.less
+++ b/components/steps/style/index.less
@@ -26,6 +26,7 @@
   display: flex;
   width: 100%;
   font-size: 0;
+  text-align: initial;
 }
 
 .@{steps-prefix-cls}-item {
